unifica footer cafecito

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <span>Buy me a coffee</span>
       </a>
 
-      <span class="note">Echoes fuel the next vibration.</span>
+      <span class="note">Fuel the craft. Inspire the next page.</span>
       <span>© <span id="y"></span> Re:sonance</span>
     </footer>
   </main>
