--- a/the-chords-book.html
+++ b/the-chords-book.html
@@ -339,29 +339,29 @@
       }
     }
 
-    footer {
-      margin-top: 2.5rem;
-      font-size: .95rem;
-      color: var(--muted);
-      display: flex;
-      gap: .75rem;
-      align-items: center;
-      flex-wrap: wrap
+    footer{
+      margin-top:2.5rem; font-size:.95rem; color:var(--muted);
+      display:flex; gap:.75rem; align-items:center; flex-wrap:wrap
     }
+    .btn{
+      border:1px solid var(--btn-border);
+      padding:.55rem .85rem;
+      border-radius:.4rem;
+      text-decoration:none;
+      color:var(--btn-ink);
+      background:var(--btn-bg);
+      display:inline-flex; align-items:center; gap:.5rem;
+      box-shadow:var(--btn-shadow);
+      line-height:1;
+    }
+    .btn:hover, .btn:focus-visible{
+      background:var(--btn-bg-hover);
+      outline:none;
+    }
+    .btn:focus-visible{outline:2px dashed var(--accent); outline-offset:2px}
+    .btn .btn-icon{width:1.05rem; height:1.05rem; flex:0 0 auto; color:currentColor}
 
-    .btn {
-      border: 1px solid var(--accent);
-      padding: .5rem .8rem;
-      border-radius: .35rem;
-      text-decoration: none
-    }
-
-    .note {
-      width: 100%;
-      color: var(--muted);
-      font-style: italic;
-      margin-top: .35rem
-    }
+    .note{width:100%; color:var(--muted); font-style:italic; margin-top:.35rem}
   </style>
 </head>
 
