--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       </a>
 
       <span class="note">Fuel the craft. Inspire the next page.</span>
-      <span>© <span id="y"></span> Re:sonance</span>
+      <span>© <span id="y"></span> Re:sonance</span> by Contumance
     </footer>
   </main>
 
