--- a/index.html
+++ b/index.html
@@ -82,29 +82,59 @@
     .title{grid-area:title; line-height:1.25}
     .meta{grid-area:meta; color:var(--muted); font-size:.95rem; margin-top:.1rem}
 
-    footer{
-      margin-top:2.5rem; font-size:.95rem; color:var(--muted);
-      display:flex; gap:.75rem; align-items:center; flex-wrap:wrap
-    }
-    .btn{
-      border:1px solid var(--btn-border);
-      padding:.55rem .85rem;
-      border-radius:.4rem;
-      text-decoration:none;
-      color:var(--btn-ink);
-      background:var(--btn-bg);
-      display:inline-flex; align-items:center; gap:.5rem;
-      box-shadow:var(--btn-shadow);
-      line-height:1;
-    }
-    .btn:hover, .btn:focus-visible{
-      background:var(--btn-bg-hover);
-      outline:none;
-    }
-    .btn:focus-visible{outline:2px dashed var(--accent); outline-offset:2px}
-    .btn .btn-icon{width:1.05rem; height:1.05rem; flex:0 0 auto; color:currentColor}
+      footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.25rem;
+    font-size: 0.9rem;
+    opacity: 0.9;
+    padding: 1.5rem 0;
+  }
 
-    .note{width:100%; color:var(--muted); font-style:italic; margin-top:.35rem}
+  footer .btn {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5rem;
+    text-decoration: none;
+    color: var(--ink);
+    background: var(--paper);
+    border: 1px solid var(--muted);
+    border-radius: 999px;
+    padding: 0.4rem 0.9rem;
+    font-size: 0.9rem;
+    transition: all 0.3s ease;
+  }
+
+  html.theme-dark footer .btn {
+    background: var(--ink);
+    color: var(--paper);
+    border-color: var(--muted);
+  }
+
+  footer .btn:hover {
+    opacity: 0.8;
+  }
+
+  footer .btn-icon {
+    width: 1.2rem;
+    height: 1.2rem;
+  }
+
+  footer .note {
+    font-size: 0.85rem;
+    color: var(--muted);
+  }
+
+  footer .byline {
+    font-size: 0.75rem;
+    opacity: 0.7;
+  }
+
+  footer .byline em {
+    font-style: italic;
+    letter-spacing: 0.02em;
+  }
 
     @media (prefers-reduced-motion:no-preference){
       a{position:relative; background-image:linear-gradient(currentColor, currentColor);
@@ -179,21 +209,21 @@
       </ul>
     </nav>
 
-    <footer>
-      <!-- Botón Buy Me a Coffee adaptado al tema (sin script externo) -->
-      <a class="btn" href="https://buymeacoffee.com/Contumance" target="_blank" rel="noopener noreferrer"
-         aria-label="Support this library on Buy Me a Coffee">
-        <svg class="btn-icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M4 8h14.5a2 2 0 0 1 0 4H18l-1 5a4 4 0 0 1-3.95 3.3H8.95A4 4 0 0 1 5 17l-1-9z"/>
-          <path d="M3 8h17"/>
-          <path d="M7 4h6"/>
-        </svg>
-        <span>Buy me a coffee</span>
-      </a>
+ <footer>
+  <!-- Botón Buy Me a Coffee adaptado al tema (sin script externo) -->
+  <a class="btn" href="https://buymeacoffee.com/Contumance" target="_blank" rel="noopener noreferrer"
+     aria-label="Support this library on Buy Me a Coffee">
+    <svg class="btn-icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M4 8h14.5a2 2 0 0 1 0 4H18l-1 5a4 4 0 0 1-3.95 3.3H8.95A4 4 0 0 1 5 17l-1-9z"/>
+      <path d="M3 8h17"/>
+      <path d="M7 4h6"/>
+    </svg>
+    <span>Buy me a coffee</span>
+  </a>
 
-      <span class="note">Fuel the craft. Inspire the next page.</span>
-      <span>© <span id="y"></span> Re:sonance</span> by Contumance
-    </footer>
+  <span class="note">Fuel the craft. Inspire the next page.</span>
+  <span>© <span id="y"></span> Re:sonance <small class="byline">by <em>Contumance</em></small></span>
+</footer>
   </main>
 
   <script>
