--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     gap: 0.5rem;
     text-decoration: none;
     color: var(--ink);
-    background: var(--paper);
+    background: var(--btn-bg);
     border: 1px solid var(--muted);
     border-radius: 999px;
     padding: 0.4rem 0.9rem;
