--- a/index.html
+++ b/index.html
@@ -82,59 +82,37 @@
     .title{grid-area:title; line-height:1.25}
     .meta{grid-area:meta; color:var(--muted); font-size:.95rem; margin-top:.1rem}
 
-      footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.25rem;
-    font-size: 0.9rem;
-    opacity: 0.9;
-    padding: 1.5rem 0;
-  }
+      /* Footer base */
+footer{
+  display:flex;flex-direction:column;align-items:center;gap:.25rem;
+  font-size:.9rem;opacity:.9;padding:1.5rem 0;
+}
 
-  footer .btn {
-    display: inline-flex;
-    align-items: center;
-    gap: 0.5rem;
-    text-decoration: none;
-    color: var(--ink);
-    background: var(--btn-bg);
-    border: 1px solid var(--muted);
-    border-radius: 999px;
-    padding: 0.4rem 0.9rem;
-    font-size: 0.9rem;
-    transition: all 0.3s ease;
-  }
+/* Botón: por defecto usa vars del tema (funciona en light automáticamente) */
+footer .btn{
+  display:inline-flex;align-items:center;gap:.5rem;
+  text-decoration:none;
+  color:var(--ink);                 /* texto e ícono */
+  background:var(--paper);          /* fondo */
+  border:1px solid var(--muted);    /* borde */
+  border-radius:999px;padding:.4rem .9rem;font-size:.9rem;
+  transition:filter .2s ease, transform .05s ease;
+}
+footer .btn:hover{filter:contrast(1.05) brightness(0.98)}
+footer .btn:active{transform:translateY(1px)}
+footer .btn .btn-icon{width:1.2rem;height:1.2rem;stroke:currentColor}
 
-  html.theme-dark footer .btn {
-    background: var(--ink);
-    color: var(--paper);
-    border-color: var(--muted);
-  }
+/* Si tu toggler agrega .theme-dark al <html> o al <body>, invertimos aquí */
+:is(html.theme-dark, body.theme-dark) footer .btn{
+  background:var(--ink);
+  color:var(--paper);
+  border-color:var(--muted);
+}
 
-  footer .btn:hover {
-    opacity: 0.8;
-  }
-
-  footer .btn-icon {
-    width: 1.2rem;
-    height: 1.2rem;
-  }
-
-  footer .note {
-    font-size: 0.85rem;
-    color: var(--muted);
-  }
-
-  footer .byline {
-    font-size: 0.75rem;
-    opacity: 0.7;
-  }
-
-  footer .byline em {
-    font-style: italic;
-    letter-spacing: 0.02em;
-  }
+/* Frase y byline */
+footer .note{font-size:.85rem;color:var(--muted)}
+footer .byline{font-size:.75rem;opacity:.7}
+footer .byline em{font-style:italic;letter-spacing:.02em}
 
     @media (prefers-reduced-motion:no-preference){
       a{position:relative; background-image:linear-gradient(currentColor, currentColor);
