correccion footer index

--- a/index.html
+++ b/index.html
@@ -82,37 +82,58 @@
     .title{grid-area:title; line-height:1.25}
     .meta{grid-area:meta; color:var(--muted); font-size:.95rem; margin-top:.1rem}
 
-      /* Footer base */
+/* Footer base */
 footer{
-  display:flex;flex-direction:column;align-items:center;gap:.25rem;
-  font-size:.9rem;opacity:.9;padding:1.5rem 0;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:.25rem;
+  font-size:.9rem;
+  opacity:.9;
+  padding:1.5rem 0;
 }
 
-/* Botón: por defecto usa vars del tema (funciona en light automáticamente) */
+/* Botón adaptativo */
 footer .btn{
-  display:inline-flex;align-items:center;gap:.5rem;
+  display:inline-flex;
+  align-items:center;
+  gap:.5rem;
   text-decoration:none;
   color:var(--ink);                 /* texto e ícono */
-  background:var(--paper);          /* fondo */
-  border:1px solid var(--muted);    /* borde */
-  border-radius:999px;padding:.4rem .9rem;font-size:.9rem;
-  transition:filter .2s ease, transform .05s ease;
+  background:color-mix(in oklab, var(--paper) 90%, var(--accent) 10%);
+  border:1px solid var(--accent);   /* borde */
+  border-radius:999px;
+  padding:.45rem .9rem;
+  font-size:.9rem;
+  box-shadow:var(--btn-shadow);
+  transition:background-color .25s ease, color .25s ease, transform .1s ease, filter .2s ease;
 }
-footer .btn:hover{filter:contrast(1.05) brightness(0.98)}
-footer .btn:active{transform:translateY(1px)}
+
+footer .btn:hover{
+  background:color-mix(in oklab, var(--accent) 25%, var(--paper) 75%);
+  filter:brightness(1.1);
+  transform:translateY(-1px);
+}
+
+footer .btn:active{transform:translateY(0)}
 footer .btn .btn-icon{width:1.2rem;height:1.2rem;stroke:currentColor}
 
-/* Si tu toggler agrega .theme-dark al <html> o al <body>, invertimos aquí */
-:is(html.theme-dark, body.theme-dark) footer .btn{
-  background:var(--ink);
+/* Modo oscuro: inversión natural */
+html.theme-dark footer .btn{
+  background:color-mix(in oklab, var(--ink) 90%, var(--accent) 10%);
   color:var(--paper);
-  border-color:var(--muted);
+  border-color:var(--accent);
+}
+html.theme-dark footer .btn:hover{
+  background:color-mix(in oklab, var(--ink) 75%, var(--accent) 25%);
+  filter:brightness(1.15);
 }
 
 /* Frase y byline */
 footer .note{font-size:.85rem;color:var(--muted)}
 footer .byline{font-size:.75rem;opacity:.7}
 footer .byline em{font-style:italic;letter-spacing:.02em}
+
 
     @media (prefers-reduced-motion:no-preference){
       a{position:relative; background-image:linear-gradient(currentColor, currentColor);
