--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -93,29 +93,61 @@
         background-repeat:no-repeat; background-size:0% 1px; transition:background-size .25s ease, color .2s ease;}
       a:hover, a:focus-visible{background-size:100% 1px; outline:none;}
     }
-    footer{
-      margin-top:2.5rem; font-size:.95rem; color:var(--muted);
-      display:flex; gap:.75rem; align-items:center; flex-wrap:wrap
-    }
-    .btn{
-      border:1px solid var(--btn-border);
-      padding:.55rem .85rem;
-      border-radius:.4rem;
-      text-decoration:none;
-      color:var(--btn-ink);
-      background:var(--btn-bg);
-      display:inline-flex; align-items:center; gap:.5rem;
-      box-shadow:var(--btn-shadow);
-      line-height:1;
-    }
-    .btn:hover, .btn:focus-visible{
-      background:var(--btn-bg-hover);
-      outline:none;
-    }
-    .btn:focus-visible{outline:2px dashed var(--accent); outline-offset:2px}
-    .btn .btn-icon{width:1.05rem; height:1.05rem; flex:0 0 auto; color:currentColor}
+    /* Footer base */
+footer{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  gap:.25rem;
+  font-size:.9rem;
+  opacity:.9;
+  padding:1.5rem 0;
+}
 
-    .note{width:100%; color:var(--muted); font-style:italic; margin-top:.35rem}
+/* Botón Buy Me a Coffee adaptado al tema */
+footer .btn{
+  display:inline-flex;
+  align-items:center;
+  gap:.5rem;
+  text-decoration:none;
+  border:1px solid var(--accent);
+  border-radius:999px;
+  padding:.45rem .95rem;
+  font-size:.9rem;
+  font-weight:500;
+  transition:background-color .25s ease, color .25s ease, transform .1s ease, filter .2s ease;
+}
+
+/* Modo claro */
+html:not(.theme-dark) footer .btn{
+  background:color-mix(in oklab, var(--accent) 10%, var(--paper) 90%);
+  color:var(--ink);
+}
+html:not(.theme-dark) footer .btn:hover{
+  background:color-mix(in oklab, var(--accent) 20%, var(--paper) 80%);
+}
+
+/* Modo oscuro */
+html.theme-dark footer .btn{
+  background:color-mix(in oklab, var(--accent) 40%, var(--ink) 60%);
+  color:var(--paper);
+}
+html.theme-dark footer .btn:hover{
+  background:color-mix(in oklab, var(--accent) 55%, var(--ink) 45%);
+}
+
+/* Ícono coherente con el color del texto */
+footer .btn .btn-icon{
+  width:1.2rem;
+  height:1.2rem;
+  stroke:currentColor;
+}
+
+/* Texto complementario */
+footer .note{font-size:.85rem;color:var(--muted)}
+footer .byline{font-size:.75rem;opacity:.7}
+footer .byline em{font-style:italic;letter-spacing:.02em}
+
   </style>
 </head>
 <body>
