--- a/the-chords-book.html
+++ b/the-chords-book.html
@@ -463,9 +463,9 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
         </svg>
         <span>Buy me a coffee</span>
       </a>
-
+      
       <span class="note">Fuel the craft. Inspire the next page.</span>
-      <span>© <span id="y"></span> Re:sonance</span>
+      <span>© <span id="y"></span> Re:sonance <small class="byline">by <em>Contumance</em></small></span>
     </footer>
   </main>
 
