--- a/the-daily-chord.html
+++ b/the-daily-chord.html
@@ -200,8 +200,8 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
         <span>Buy me a coffee</span>
       </a>
 
-      <span class="note">Fuel the craft. Inspire the next page.</span>
-      <span>© <span id="y"></span> Re:sonance</span>
+        <span class="note">Fuel the craft. Inspire the next page.</span>
+  <span>© <span id="y"></span> Re:sonance <small class="byline">by <em>Contumance</em></small></span>
     </footer>
   </main>
 
