--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -317,31 +317,37 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
         if(arr.length<n){ while(arr.length<n) arr.push(fill); }
         else if(arr.length>n){ arr.splice(n); }
       }
-      // Reemplazar la función ensureTuningLen por esta
+// Versión sin dependencias del motor de audio
 function ensureTuningLen(n){
-  // Si tenemos que agregar cuerdas nuevas, las vamos bajando de a una cuarta (−5 st)
-  while(state.tuning.length < n){
+  // Aseguramos arrays paralelos
+  if (!Array.isArray(state.tuning)) state.tuning = [];
+  if (!Array.isArray(state.octaves)) state.octaves = [];
+
+  // Si faltan cuerdas, agregamos bajando de a una cuarta (−5 st) desde la más grave actual
+  while (state.tuning.length < n) {
     const i = state.tuning.length;
 
-    // Tomamos como base la cuerda más grave actual
-    const prevNote = state.tuning[i-1] || "E";
-    const prevOct  = (state.octaves[i-1] != null)
-      ? state.octaves[i-1]
-      : (i-1 < DEFAULT_OCTAVES_6.length ? DEFAULT_OCTAVES_6[i-1] : 2);
+    // Base: última cuerda existente o estándar E2
+    const prevNote = (i > 0) ? state.tuning[i - 1] : "E";
+    const prevOct  = (i > 0)
+      ? (state.octaves[i - 1] ?? 2)
+      : 2; // E2 por defecto
 
-    // MIDI de la anterior y nueva nota una cuarta abajo
-    const midiPrev = AudioEngine.noteToMidi(prevNote, prevOct); // C-1=0 … A4=69
-    const midiNew  = midiPrev - 5; // cuarta justa abajo
+    // Nota previa en índice de 0..11
+    let prevPc = noteIndex(prevNote);
+    if (prevPc < 0) prevPc = 4; // E
 
-    // Pasamos de MIDI → nota + octava
-    const pc  = ((midiNew % 12) + 12) % 12;
-    const oct = Math.floor(midiNew / 12) - 1;
+    // Restamos 5 semitonos (cuarta justa abajo)
+    let newPc = prevPc - 5;
+    let octave = prevOct;
+    if (newPc < 0) { newPc += 12; octave -= 1; }
 
-    state.tuning.push(NOTES_SHARP[pc]);
-    state.octaves.push(oct);
+    // Guardamos
+    state.tuning.push(NOTES_SHARP[newPc]);
+    state.octaves.push(octave);
   }
 
-  // Si hay que recortar cuerdas, recortamos ambas estructuras en tándem
+  // Si sobran cuerdas, recortamos ambos arrays
   if (state.tuning.length > n) {
     state.tuning.splice(n);
     state.octaves.splice(n);
