Escalas the-scales-book.html

--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -267,20 +267,102 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
       // ------- Musical data -------
       var NOTES_SHARP = ["C","C#","D","D#","E","F","F#","G","G#","A","A#","B"];
       var SCALES = {
-        "Major (Ionian)": [0,2,4,5,7,9,11],
-        "Natural minor (Aeolian)": [0,2,3,5,7,8,10],
-        "Harmonic minor": [0,2,3,5,7,8,11],
-        "Melodic minor (asc)": [0,2,3,5,7,9,11],
-        "Pentatonic major": [0,2,4,7,9],
-        "Pentatonic minor": [0,3,5,7,10],
-        "Blues minor": [0,3,5,6,7,10],
-        "Dorian": [0,2,3,5,7,9,10],
-        "Phrygian": [0,1,3,5,7,8,10],
-        "Lydian": [0,2,4,6,7,9,11],
-        "Mixolydian": [0,2,4,5,7,9,10],
-        "Locrian": [0,1,3,5,6,8,10],
-        "Whole tone": [0,2,4,6,8,10],
-        "Chromatic": [0,1,2,3,4,5,6,7,8,9,10,11]
+  "Altered (Super Locrian)": [0,1,3,4,6,8,10],
+  "Altered dominant": [0,1,3,4,6,8,10],
+  "Andalusian": [0,1,4,5,7,8,10],
+  "Arabic Hijaz Kar": [0,1,4,5,7,8,11],
+  "Augmented": [0,3,4,7,8,11],
+  "Augmented triad scale": [0,3,4,7,8,11],
+  "Balinese (Pelog)": [0,1,3,7,8],
+  "Blues hexatonic": [0,3,5,6,7,10],
+  "Blues major": [0,2,3,4,7,9],
+  "Blues minor": [0,3,5,6,7,10],
+  "Byzantine": [0,1,4,5,7,8,11],
+  "Chinese Gong": [0,2,4,7,9],
+  "Chinese Jue": [0,3,5,8,10],
+  "Chinese Shang": [0,2,5,7,10],
+  "Chinese Yu": [0,3,5,7,10],
+  "Chinese Zhi": [0,2,5,7,9],
+  "Chromatic": [0,1,2,3,4,5,6,7,8,9,10,11],
+  "Dominant bebop": [0,2,4,5,7,9,10,11],
+  "Dominant diminished": [0,2,3,5,6,8,9,11],
+  "Dorian": [0,2,3,5,7,9,10],
+  "Double harmonic (Arabic)": [0,1,4,5,7,8,11],
+  "Double harmonic minor": [0,1,4,5,7,8,11],
+  "Enigmatic": [0,1,4,6,8,10,11],
+  "Fibonacci (approx.)": [0,1,2,3,5,8],
+  "Flamenco": [0,1,4,5,7,8,10],
+  "Flamenco dominant": [0,1,4,5,7,8,10],
+  "Fourth-based": [0,5,10],
+  "Gypsy minor": [0,2,3,6,7,8,11],
+  "Half diminished (Locrian #2)": [0,2,3,5,6,8,10],
+  "Half-whole diminished": [0,1,3,4,6,7,9,10],
+  "Harmonic minor": [0,2,3,5,7,8,11],
+  "Heavy metal (E phrygian dominant style)": [0,1,4,5,7,8,10],
+  "Hijaz": [0,1,4,5,7,8,10],
+  "Hungarian gypsy": [0,2,3,6,7,8,11],
+  "Hungarian major": [0,3,4,6,7,9,10],
+  "Hungarian minor": [0,2,3,6,7,8,11],
+  "Japanese Hirajoshi": [0,2,3,7,8],
+  "Japanese In Sen": [0,1,5,7,10],
+  "Japanese Kumoi": [0,2,3,7,9],
+  "Japanese Yo": [0,2,5,7,9],
+  "Leading whole tone": [0,2,4,6,8,10,11],
+  "Locrian": [0,1,3,5,6,8,10],
+  "Lydian": [0,2,4,6,7,9,11],
+  "Lydian augmented": [0,2,4,6,8,9,11],
+  "Lydian dominant": [0,2,4,6,7,9,10],
+  "Major (Ionian)": [0,2,4,5,7,9,11],
+  "Major bebop": [0,2,4,5,7,8,9,11],
+  "Major Locrian": [0,2,4,5,6,8,10],
+  "Melodic minor (asc)": [0,2,3,5,7,9,11],
+  "Messiaen mode 3": [0,2,3,4,6,7,8,10,11],
+  "Messiaen mode 4": [0,1,2,5,6,7,8,11],
+  "Messiaen mode 5": [0,1,5,6,7,11],
+  "Messiaen mode 6": [0,2,4,5,6,8,10,11],
+  "Messiaen mode 7": [0,1,2,3,5,6,7,8,10,11],
+  "Middle Eastern": [0,1,4,5,7,8,10],
+  "Minor bebop": [0,2,3,5,7,8,9,10],
+  "Minor 6 Dorian": [0,2,3,5,7,9,10,11],
+  "Minor-major (Melodic minor variant)": [0,2,3,5,7,9,11],
+  "Mixolydian": [0,2,4,5,7,9,10],
+  "Mixolydian b6": [0,2,4,5,7,8,10],
+  "Natural minor (Aeolian)": [0,2,3,5,7,8,10],
+  "Neapolitan major": [0,1,3,5,7,9,11],
+  "Neapolitan minor": [0,1,3,5,7,8,11],
+  "Pentatonic b2": [0,1,5,7,10],
+  "Pentatonic major": [0,2,4,7,9],
+  "Pentatonic minor": [0,3,5,7,10],
+  "Persian": [0,1,4,5,6,8,11],
+  "Persian diminished": [0,1,4,5,6,9,10],
+  "Phrygian": [0,1,3,5,7,8,10],
+  "Phrygian dominant": [0,1,4,5,7,8,10],
+  "Prometheus": [0,2,4,6,9,10],
+  "Prometheus Neapolitan": [0,1,4,6,9,10],
+  "Raga Ahir Bhairav": [0,1,4,5,7,9,10],
+  "Raga Asavari": [0,2,3,5,7,8,10],
+  "Raga Bhairav": [0,1,4,5,7,8,11],
+  "Raga Bhairavi": [0,1,3,5,7,8,10],
+  "Raga Charukeshi": [0,2,4,5,7,8,10],
+  "Raga Hamsadhwani": [0,2,4,7,11],
+  "Raga Kafi": [0,2,3,5,7,9,10],
+  "Raga Kalyan": [0,2,4,6,7,9,11],
+  "Raga Kirwani": [0,2,3,5,7,8,11],
+  "Raga Marva": [0,1,4,6,7,9,11],
+  "Raga Todi": [0,1,3,6,7,8,11],
+  "Romanian minor": [0,2,3,6,7,9,10],
+  "Rumba": [0,2,4,5,7,9,10],
+  "Ryukyu (Okinawan)": [0,4,5,7,11],
+  "Siam (Thai)": [0,1,3,5,7,10],
+  "Six tone symmetric": [0,2,4,6,8,10],
+  "Spanish (Phrygian dominant variant)": [0,1,3,4,5,7,8,10],
+  "Spanish 8-tone": [0,1,3,4,5,6,8,10],
+  "Tango": [0,2,3,6,7,9,10],
+  "Tritone scale": [0,1,4,6,7,10],
+  "Ukrainian Dorian": [0,2,3,6,7,9,10],
+  "Ultraphrygian": [0,1,3,4,6,7,9,10],
+  "Whole tone": [0,2,4,6,8,10],
+  "Whole-half diminished": [0,2,3,5,6,8,9,11]
       };
       var DEFAULT_TUNING_6 = ["E","B","G","D","A","E"]; // 1st (highest) on top
       var DEFAULT_OCTAVES_6 = [4,3,3,3,2,2]; // E4,B3,G3,D3,A2,E2
