--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -330,6 +330,10 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
   "Natural minor (Aeolian)": [0,2,3,5,7,8,10],
   "Neapolitan major": [0,1,3,5,7,9,11],
   "Neapolitan minor": [0,1,3,5,7,8,11],
+  "Octatonic (Whole-Half)": [0,2,3,5,6,8,9,11],
+"Octatonic (Half-Whole)": [0,1,3,4,6,7,9,10],
+"Octatonic (Dominant Dim)": [0,1,3,4,6,7,9,10],
+"Octatonic (Diminished)": [0,2,3,5,6,8,9,11],
   "Pentatonic b2": [0,1,5,7,10],
   "Pentatonic major": [0,2,4,7,9],
   "Pentatonic minor": [0,3,5,7,10],
