--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -267,16 +267,23 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
       // ------- Musical data -------
       var NOTES_SHARP = ["C","C#","D","D#","E","F","F#","G","G#","A","A#","B"];
       var SCALES = {
+  "Acoustic (Lydian Dominant b7)": [0,2,4,6,7,9,10],
+  "Aeolian ♭5": [0,2,3,5,6,8,10],
+  "Aeolian Dominant": [0,2,4,5,7,8,10],
   "Altered (Super Locrian)": [0,1,3,4,6,8,10],
   "Altered dominant": [0,1,3,4,6,8,10],
   "Andalusian": [0,1,4,5,7,8,10],
   "Arabic Hijaz Kar": [0,1,4,5,7,8,11],
   "Augmented": [0,3,4,7,8,11],
+  "Augmented Heptatonic": [0,2,4,5,8,9,11],
   "Augmented triad scale": [0,3,4,7,8,11],
   "Balinese (Pelog)": [0,1,3,7,8],
+  "Bartók": [0,2,4,5,7,8,10],
   "Blues hexatonic": [0,3,5,6,7,10],
   "Blues major": [0,2,3,4,7,9],
   "Blues minor": [0,3,5,6,7,10],
+  "Blues mixolydian": [0,2,3,4,5,7,9,10],
+  "Bhairav": [0,1,4,5,7,8,11],
   "Byzantine": [0,1,4,5,7,8,11],
   "Chinese Gong": [0,2,4,7,9],
   "Chinese Jue": [0,3,5,8,10],
@@ -284,37 +291,49 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
   "Chinese Yu": [0,3,5,7,10],
   "Chinese Zhi": [0,2,5,7,9],
   "Chromatic": [0,1,2,3,4,5,6,7,8,9,10,11],
+  "Dorian": [0,2,3,5,7,9,10],
+  "Dorian ♭2": [0,1,3,5,7,9,10],
+  "Double harmonic (Arabic)": [0,1,4,5,7,8,11],
+  "Double harmonic major": [0,1,4,5,7,8,11],
   "Dominant bebop": [0,2,4,5,7,9,10,11],
   "Dominant diminished": [0,2,3,5,6,8,9,11],
-  "Dorian": [0,2,3,5,7,9,10],
-  "Double harmonic (Arabic)": [0,1,4,5,7,8,11],
-  "Double harmonic minor": [0,1,4,5,7,8,11],
+  "Egyptian": [0,2,5,7,10],
   "Enigmatic": [0,1,4,6,8,10,11],
+  "Enigmatic minor": [0,1,3,6,8,10,11],
   "Fibonacci (approx.)": [0,1,2,3,5,8],
   "Flamenco": [0,1,4,5,7,8,10],
   "Flamenco dominant": [0,1,4,5,7,8,10],
   "Fourth-based": [0,5,10],
+  "Gypsy major": [0,1,4,5,7,8,10],
   "Gypsy minor": [0,2,3,6,7,8,11],
   "Half diminished (Locrian #2)": [0,2,3,5,6,8,10],
   "Half-whole diminished": [0,1,3,4,6,7,9,10],
+  "Harmonic major": [0,2,4,5,7,8,11],
   "Harmonic minor": [0,2,3,5,7,8,11],
-  "Heavy metal (E phrygian dominant style)": [0,1,4,5,7,8,10],
+  "Harmonic minor ♭5": [0,2,3,5,6,8,11],
+  "Hirajoshi (Japanese)": [0,2,3,7,8],
   "Hijaz": [0,1,4,5,7,8,10],
   "Hungarian gypsy": [0,2,3,6,7,8,11],
   "Hungarian major": [0,3,4,6,7,9,10],
   "Hungarian minor": [0,2,3,6,7,8,11],
-  "Japanese Hirajoshi": [0,2,3,7,8],
+  "Ionian ♯5": [0,2,4,5,8,9,11],
+  "Ionian Augmented": [0,2,4,5,8,9,11],
   "Japanese In Sen": [0,1,5,7,10],
   "Japanese Kumoi": [0,2,3,7,9],
   "Japanese Yo": [0,2,5,7,9],
+  "Kafi (Raga)": [0,2,3,5,7,9,10],
   "Leading whole tone": [0,2,4,6,8,10,11],
   "Locrian": [0,1,3,5,6,8,10],
+  "Locrian natural 2": [0,2,3,5,6,8,10],
+  "Locrian major": [0,2,4,5,6,8,10],
   "Lydian": [0,2,4,6,7,9,11],
   "Lydian augmented": [0,2,4,6,8,9,11],
+  "Lydian b7": [0,2,4,6,7,9,10],
   "Lydian dominant": [0,2,4,6,7,9,10],
   "Major (Ionian)": [0,2,4,5,7,9,11],
   "Major bebop": [0,2,4,5,7,8,9,11],
   "Major Locrian": [0,2,4,5,6,8,10],
+  "Major pentatonic": [0,2,4,7,9],
   "Melodic minor (asc)": [0,2,3,5,7,9,11],
   "Messiaen mode 3": [0,2,3,4,6,7,8,10,11],
   "Messiaen mode 4": [0,1,2,5,6,7,8,11],
@@ -322,21 +341,21 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
   "Messiaen mode 6": [0,2,4,5,6,8,10,11],
   "Messiaen mode 7": [0,1,2,3,5,6,7,8,10,11],
   "Middle Eastern": [0,1,4,5,7,8,10],
-  "Minor bebop": [0,2,3,5,7,8,9,10],
   "Minor 6 Dorian": [0,2,3,5,7,9,10,11],
+  "Minor bebop": [0,2,3,5,7,8,9,10],
   "Minor-major (Melodic minor variant)": [0,2,3,5,7,9,11],
   "Mixolydian": [0,2,4,5,7,9,10],
   "Mixolydian b6": [0,2,4,5,7,8,10],
+  "Mixolydian b9 b13": [0,1,4,5,7,8,10],
   "Natural minor (Aeolian)": [0,2,3,5,7,8,10],
   "Neapolitan major": [0,1,3,5,7,9,11],
   "Neapolitan minor": [0,1,3,5,7,8,11],
+  "Nine tone scale": [0,1,2,4,5,6,8,9,10],
+  "Octatonic (Diminished)": [0,2,3,5,6,8,9,11],
+  "Octatonic (Dominant Dim)": [0,1,3,4,6,7,9,10],
+  "Octatonic (Half-Whole)": [0,1,3,4,6,7,9,10],
   "Octatonic (Whole-Half)": [0,2,3,5,6,8,9,11],
-"Octatonic (Half-Whole)": [0,1,3,4,6,7,9,10],
-"Octatonic (Dominant Dim)": [0,1,3,4,6,7,9,10],
-"Octatonic (Diminished)": [0,2,3,5,6,8,9,11],
-  "Pentatonic b2": [0,1,5,7,10],
-  "Pentatonic major": [0,2,4,7,9],
-  "Pentatonic minor": [0,3,5,7,10],
+  "Overtone (Lydian dominant natural 13)": [0,2,4,6,7,9,10],
   "Persian": [0,1,4,5,6,8,11],
   "Persian diminished": [0,1,4,5,6,9,10],
   "Phrygian": [0,1,3,5,7,8,10],
@@ -349,7 +368,6 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
   "Raga Bhairavi": [0,1,3,5,7,8,10],
   "Raga Charukeshi": [0,2,4,5,7,8,10],
   "Raga Hamsadhwani": [0,2,4,7,11],
-  "Raga Kafi": [0,2,3,5,7,9,10],
   "Raga Kalyan": [0,2,4,6,7,9,11],
   "Raga Kirwani": [0,2,3,5,7,8,11],
   "Raga Marva": [0,1,4,6,7,9,11],
@@ -361,6 +379,7 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
   "Six tone symmetric": [0,2,4,6,8,10],
   "Spanish (Phrygian dominant variant)": [0,1,3,4,5,7,8,10],
   "Spanish 8-tone": [0,1,3,4,5,6,8,10],
+  "Symmetric diminished": [0,1,3,4,6,7,9,10],
   "Tango": [0,2,3,6,7,9,10],
   "Tritone scale": [0,1,4,6,7,10],
   "Ukrainian Dorian": [0,2,3,6,7,9,10],
