--- a/the-chords-book.html
+++ b/the-chords-book.html
@@ -413,7 +413,7 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
     </header>
 
     <details class="panel" open>
-      <summary>Setup</summary>
+      <summary>Guitar setup</summary>
       <div class="panel-body">
         <div class="controls" role="group" aria-label="Controls">
           <div class="row">
