--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -56,6 +56,9 @@
       float: right;
       transition: transform .2s ease;
     }
+    details.panel[open]>summary::after {
+      transform: rotate(180deg);
+    }
     details.panel .panel-body{padding:.6rem .8rem .9rem;}
     .controls{display:grid; gap:8px; align-items:center; grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); margin-bottom:8px;}
     .row{display:flex; gap:8px; align-items:center; flex-wrap:wrap}
