--- a/index.html
+++ b/index.html
@@ -206,6 +206,19 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
             <span class="meta">Each day, a chord — seen anew, to awaken inspiration.</span>
           </a>
         </li>
+        
+        <!-- DRONE ROOM -->
+<li>
+  <a class="item" href="the-drone-room.html">
+    <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+      <!-- minimal waveform + anchor dot -->
+      <path d="M2.5 12c2.4-6 5.4 6 8 0s5.6-6 8 0" />
+      <circle cx="20" cy="12" r="1.3" fill="currentColor" stroke="none"/>
+    </svg>
+    <span class="title">The Drone Room</span>
+    <span class="meta">A steady base tone to explore and improvise.</span>
+  </a>
+</li>
 
       </ul>
     </nav>
