--- a/index.html
+++ b/index.html
@@ -219,6 +219,19 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
     <span class="meta">A steady base tone to explore and improvise.</span>
   </a>
 </li>
+   <!-- AURAL GARDEN -->
+<li>
+  <a class="item" href="aural-garden.html">
+    <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="currentColor">
+      <!-- Leaf + sine wave -->
+      <path d="M4 19c7-1 11-5 14-14" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+      <path d="M5 12c1.5-1 3 1 4.5 0s3-2 4.5-1 3 3 5 2" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
+      <path d="M17 5c0 3-3 6-6 6" fill="none" stroke="currentColor" stroke-width="1.2" stroke-linecap="round"/>
+    </svg>
+    <span class="title">Aural Garden</span>
+    <span class="meta">A quiet, audio-reactive garden for chords.</span>
+  </a>
+</li>
 
       </ul>
     </nav>
