--- a/index.html
+++ b/index.html
@@ -233,6 +233,22 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
   </a>
 </li>
 
+      <!-- INTERVALS GARDEN -->
+      <li>
+        <a class="item" href="the-intervals-garden.html">
+          <!-- Garden icon: two floating notes connected -->
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M6 17.5c0 1.38-1.12 2.5-2.5 2.5S1 18.88 1 17.5 2.12 15 3.5 15 6 16.12 6 17.5z"/>
+            <path d="M23 6v7.5a3.5 3.5 0 1 1-2-3.15V5.5L9 8v7.5a3.5 3.5 0 1 1-2-3.15"/>
+            <path d="M6.5 11.5C9 10 12 9 15 8"/>
+          </svg>
+          <span class="cell">
+            <span class="title">The Intervals Garden</span>
+            <span class="meta">Where distances become colors. Plant pairs, hear tension vs. rest, and train your ear.</span>
+          </span>
+        </a>
+      </li>
+
       </ul>
     </nav>
 
