--- a/index.html
+++ b/index.html
@@ -249,6 +249,22 @@ footer .byline em{font-style:italic;letter-spacing:.02em}
         </a>
       </li>
 
+<!-- TUNING ARCHIVE -->
+<li>
+  <a class="item" href="the-tuning-archive.html">
+    <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="currentColor">
+      <!-- Ícono: clavijero minimal (3 clavijas) -->
+      <rect x="5" y="9.5" width="11" height="5" rx="1.2"></rect>
+      <circle cx="6.5" cy="7.2" r="1.2"></circle>
+      <circle cx="9.5" cy="6.2" r="1.2"></circle>
+      <circle cx="12.5" cy="5.6" r="1.2"></circle>
+      <rect x="16.2" y="10.7" width="2.4" height="2.6" rx=".5"></rect>
+    </svg>
+    <span class="title">The Tuning Archive</span>
+    <span class="meta">Alternative guitar tunings — searchable, playable, and collectible.</span>
+  </a>
+</li>
+
       </ul>
     </nav>
 
